--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -45,8 +45,11 @@
         </div>
 
         <div class="password-strength">
-            <span>Strength</span>
+            <span style="font-size: 25px; padding-top: 10px; margin-bottom: 10px;">💪🏾 Strength</span>
             <div class="strength-indicator">
+                <span class="strength-pill"></span>
+                <span class="strength-pill"></span>
+                <span class="strength-pill"></span>
                 <span class="strength-pill"></span>
                 <span class="strength-pill"></span>
                 <span class="strength-pill"></span>
@@ -54,7 +57,7 @@
             </div>
         </div>
 
-        <button @onclick="Generatepassword">Generate</button>
+        <button class="gen-button" @onclick="Generatepassword">Generate</button>
     </div>
 </div>
 
