--- a/Pages/Home.razor.css
+++ b/Pages/Home.razor.css
@@ -15,7 +15,7 @@
     padding: 20px 40px;
 }
 
-.app-container > * {
+.app-container>* {
     width: 100%;
 }
 
@@ -31,13 +31,13 @@
     justify-content: space-between;
 }
 
-.password-field > span {
+.password-field>span {
     flex-grow: 11;
 }
 
 .copy-icon {
     cursor: pointer;
-    flex-grow: 1  ;
+    flex-grow: 1;
 }
 
 .app-body {
@@ -47,7 +47,7 @@
     align-items: center;
 }
 
-.app-body > * {
+.app-body>* {
     width: 100%;
 }
 
@@ -67,13 +67,15 @@
     margin: 2px;
     border: 1px solid #fff;
     background-color: transparent;
+    padding: 5px;
+    margin-right: 8px;
 }
 
 .weak-strength-pill {
     background-color: red;
 }
 
-.normal-strength-pill { 
+.normal-strength-pill {
     background-color: yellow;
 }
 
@@ -98,4 +100,8 @@ button {
     font-weight: 700;
     width: 100%;
     cursor: pointer;
+}
+
+.gen-button {
+    margin-top: 15px;
 }
